<resources>
    <string name="app_name">Lab4</string>

    <!-- LOGIN ACTIVITY -->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Sign In</string>
    <string name="emailError">Invalid Email</string>
    <string name="passwordError">Empty Password</string>

    <!-- HOME FRAGMENT -->
    <string name="home_fragment_welcome_prepend">Welcome</string>

    <!-- CREATE COMPLAINT FRAGMENT -->
    <string name="make_complaint_fragment_name_title">Name</string>
    <string name="make_complaint_fragment_commentary_title">Complaint</string>
    <string name="make_complaint_fragment_create_button">Create</string>

    <!-- COMPLAINTS FRAGMENT -->
    <string name="complaints_fragment_id_prefix">ID</string>
    <string name="complaints_fragment_name_prefix">NAME</string>
    <string name="complaints_fragment_date_prefix">DATE</string>
    <string name="complaints_fragment_commentary_prefix">COMMENTARY</string>

    <!-- COMPLAINTS SUMMARY FRAGMENT -->
    <string name="complaints_summary_fragment_active_complaints_title">Active Complaints</string>
    <string name="complaints_summary_fragment_replied_complaints_title">Replied Complaints</string>

    <!-- SHARED PREFERENCES -->
    <string name="credentials_shared_preference_file">com.example.lab.CREDENTIALS_PREFERENCE_FILE_KEY</string>
    <string name="useremail_credential_key">EMAIL</string>
    <string name="password_credential_key">PASSWORD</string>
    <string name="default_empty_credential_value"></string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_home_title">Home</string>
    <string name="navigation_drawer_make_complaint_title">Make Complaint</string>
    <string name="navigation_drawer_complaints_title">My Complaints</string>
    <string name="navigation_drawer_others_complaints_title">Others Complaints</string>
    <string name="navigation_drawer_complaints_summary_title">Complaints Summary</string>
    <string name="navigation_drawer_sign_out_title">Sign Out</string>

    <!-- ACTION BAR -->
    <string name="action_bar_home_title">Home</string>
    <string name="action_bar_make_complaint_title">Make Complaint</string>
    <string name="action_bar_complaints_title">My Complaints</string>
    <string name="action_bar_others_complaints_title">Others Complaints</string>
    <string name="action_bar_complaints_summary_title">Complaints Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
