<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MakeComplaintFragment">

    <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:background="#0000"
            android:padding="10dp"
            app:srcCompat="@drawable/calendar_icon"/>

    <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/calendarButton"
            app:layout_constraintTop_toTopOf="@+id/calendarButton"
            app:layout_constraintBottom_toBottomOf="@+id/calendarButton"/>

    <TextView
        android:id="@+id/nameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/make_complaint_fragment_name_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/commentaryTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/make_complaint_fragment_commentary_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/commentaryEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/commentaryTitleTextView"
        app:layout_constraintBottom_toTopOf="@+id/takePictureImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <ImageButton
        android:id="@+id/takePictureImageButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/createComplaintButton"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/camera_icon"/>

    <Button
        android:id="@+id/createComplaintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/make_complaint_fragment_create_button"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

</android.support.constraint.ConstraintLayout>